--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "pretty:check": "prettier --check ."
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.12",
+    "axios": "^1.13.2",
     "i18next": "^25.7.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-i18next": "^16.5.0"
+    "react-i18next": "^16.5.0",
+    "react-router": "^7.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
